--- a/package.json
+++ b/package.json
@@ -1,11 +1,33 @@
 {
   "name": "yangfan-npm-publish-test",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "test for npm publish",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "node test"
+    "build": "tsc",
+    "demo": "cd demo && ts-node",
+    "demo:debug": "cd demo && node --inspect-brk -r ts-node/register",
+    "prepublish": "npm run build && npm run release",
+    "release": "standard-version"
   },
+  "dependencies": {
+    "change-case": "^3.1.0",
+    "core-decorators": "^0.20.0",
+    "lodash": "^4.17.15",
+    "require-all": "^3.0.0"
+  },
+  "devDependencies": {
+    "@types/koa": "^2.0.52",
+    "@types/node": "^12.12.14",
+    "@typescript-eslint/parser": "^2.9.0",
+    "eslint": "^6.7.1",
+    "eslint-config-qunar-typescript": "0.0.4",
+    "koa": "^2.11.0",
+    "standard-version": "^7.0.1",
+    "ts-node": "^8.5.2",
+    "typescript": "^3.7.2"
+  },
+  "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yangfan86/yangfan-npm-publish-test.git"
