--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yangfan-npm-publish-test",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "test for npm publish",
   "main": "dist/index.js",
   "scripts": {
@@ -27,6 +27,10 @@
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
   },
+  "files": [
+    "dist",
+    "typings"
+  ],
   "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
