--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,53 @@
-node_modules
-dist
+# kdiff3 ignore
+*.orig
+
+# maven ignore
+target/
+
+# eclipse ignore
+.settings/
+.project
+.classpath
+
+# idea ignore
+.idea/
+*.ipr
+*.iml
+*.iws
+
+# temp ignore
+*.log
+*.cache
+*.diff
+*.patch
+*.tmp
+
+# system ignore
+.DS_Store
+Thumbs.db
+
+# package ignore (optional)
+# *.jar
+# *.war
+# *.zip
+# *.tar
+# *.tar.gz
+
+# pods ignore
+Pods/
+
+# app ignore
+/node_modules
+*.pid
+healthcheck.html
+/resource
+/logs
+/cache
+# ts build result
+/dist
+/declaration
+# vscode
+/.vscode
+
+# yarn.lock
+yarn.lock
