--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
-"compilerOptions": {
-  "module": "commonjs",
-  "declaration": true,
-  "removeComments": false,
-  "target": "es6",
-  "sourceMap": true,
-  "outDir": "./dist"
-},
-"include": ["src/**/*"],
-"exclude": ["node_modules"]
+  "compilerOptions": {
+    "module": "commonjs",
+    "declaration": true,
+    "removeComments": true,
+    "target": "es6",
+    "sourceMap": false,
+    "outDir": "./dist",
+    "allowJs": true
+  },
+  "include": ["src/**/*", "typings"],
+  "exclude": ["node_modules"]
 }
