--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "build:browser": "tsc -p tsconfig.browser.json ",
     "ts:node": "ts-node",
     "prepublish": "npm run build && npm run release",
     "release": "standard-version",
-    "browser": "tsc && http-server -o",
-    "node": "ts-node node/app"
+    "browser": "npm run build:browser && http-server -o",
+    "node": "npm run ts:node node/app"
   },
   "dependencies": {
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "@types/node": "^13.13.2",
     "http-server": "^0.12.1",
-    "typescript": "^3.8.3",
     "koa": "^2.11.0",
     "standard-version": "^7.0.1",
-    "ts-node": "^8.5.2"
+    "ts-node": "^8.5.2",
+    "typescript": "^3.8.3"
   },
   "files": [
     "dist",
